# derim-middleware

./: .bandit.yml  .dockerignore  .env.example  .env.example.bak  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DERIM_world_class_release_blueprint.md  Dockerfile  Dockerfile.bak  README.md  ROADMAP.md  apply_phase1.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-container.yml  publish-pypi.yml
.venv_diag/: pyvenv.cfg
_diagnostics/: REPORT_20260613_143801.md  REPORT_20260613_145543.md
app/: Analytics.tsx  CinematicBackground.tsx  DesignPartnerCTA.tsx  Header.tsx  HeroBridge.tsx  InteractiveDemoHub.tsx  cinematic.ts  globals.css  layout.tsx  layout.tsx.bak  page.tsx  page.tsx.bak  robots.ts  sitemap.ts
app/privacy/: page.tsx
app/terms/: page.tsx
data/: sample_solar_data.csv
docs/: adapters.md  api_reference.md  architecture.md  deployment.md  digital_twin.md
notebooks/: 01_data_exploration.ipynb  02_protocol_demo.ipynb  03_digital_twin_training.ipynb  04_api_client_demo.ipynb
requirements/: base.txt  dev.txt  ml.txt
src/derim/: __init__.py  config.py  main.py
src/derim/adapters/: __init__.py  base.py  dispatch.py  modbus.py  mqtt.py  ocpp.py  registry.py  sunspec.py
src/derim/api/: __init__.py  dependencies.py
src/derim/api/routes/: __init__.py  control.py  data.py  digital_twin.py
src/derim/digital_twin/: __init__.py  simulator.py  trainer.py
src/derim/digital_twin/models/: __init__.py  baseline.py  lstm_forecaster.py
src/derim/models/: __init__.py  adapters.py  common.py
src/derim/storage/: __init__.py  base.py  influxdb.py  sqlite.py
src/derim/utils/: __init__.py  logger.py
src/derim_middleware.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_adapters.py  test_api.py  test_config.py  test_digital_twin.py  test_models.py  test_registry.py  test_storage.py
